<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/map_item"
        android:title="@string/map">
    </item>
    <item
        android:id="@+id/report_item"
        android:title="@string/jelentesek">
    </item>
    <item
        android:id="@+id/car_reports_item"
        android:title="@string/utaz_saim">
    </item>
    <item
        android:id="@+id/leaderboard"
        android:title="@string/ranglista">
    </item>
    <item
        android:id="@+id/registration_item"
        android:title="@string/register">
    </item>
    <item
        android:id="@+id/login_item"
        android:title="@string/login">
    </item>
    <item
        android:id="@+id/logout_item"
        android:title="@string/logout">
    </item>

</menu>