<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_location_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/report_details"
        android:textSize="18sp"
        android:fontFamily="sans-serif-medium"
        android:paddingBottom="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mean_of_transport"
            android:textSize="18sp"
            android:fontFamily="sans-serif-medium"
            android:paddingBottom="8dp"
            android:layout_weight="1"/>

        <Spinner
            android:id="@+id/spinner_transport"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type_of_problem"
            android:textSize="18sp"
            android:fontFamily="sans-serif-medium"
            android:paddingBottom="8dp"
            android:layout_weight="1"/>

        <Spinner
            android:id="@+id/spinner_problem_type"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/destination"
            android:textSize="18sp"
            android:fontFamily="sans-serif-medium"
            android:paddingBottom="8dp"
            android:layout_weight="1"/>


        <EditText
            android:id="@+id/et_destination"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:hint="@string/budapest"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delay_duration"
            android:textSize="18sp"
            android:fontFamily="sans-serif-medium"
            android:paddingBottom="8dp"
            android:layout_weight="0.4"/>


        <EditText
            android:id="@+id/et_delay_duration"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:hint="@string/budapest"/>

    </LinearLayout>


    <EditText
        android:id="@+id/et_problem_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_details_about_the_problem"
        android:inputType="textMultiLine"
        android:minHeight="100dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:paddingTop="16dp">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:layout_marginStart="16dp"
            android:onClick="sendReport"/>
    </LinearLayout>
</LinearLayout>
