<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <!-- Starting City Item -->
    <TextView
        android:id="@+id/reportsStartingCity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/starting_city"
        android:textSize="16sp" />

    <!-- Destination City Item -->
    <TextView
        android:id="@+id/reportsDestinationCity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/destination_city"
        android:textSize="16sp" />

    <!-- Details Button -->
    <Button
        android:id="@+id/btnDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:padding="8dp"
        android:text="@string/details"
        android:textSize="14sp" />
</LinearLayout>
