<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            layout="@layout/toolbar"
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <!-- Email mező -->
        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:backgroundTint="@color/black"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp"/>

        <!-- Jelszó mező -->
        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:backgroundTint="@color/black"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>

        <!-- Bejelentkezés gomb -->
        <Button
            android:id="@+id/loginButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:onClick="login"
            android:text="@string/login"
            android:backgroundTint="@color/lightblue"
            android:textColor="@color/black"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Regisztráció gomb -->
        <Button
            android:id="@+id/registration"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/register"
            android:onClick="registrationActivity"
            android:backgroundTint="@color/lightblue"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/loginButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Elfelejtett jelszó gomb -->
        <Button
            android:id="@+id/forgotPassword"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/forgot_password"
            android:onClick="forgotPasswordActivity"
            android:backgroundTint="@color/lightblue"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/registration"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- E-mail újraküldés gomb (láthatóság látható/invisible) -->
        <Button
            android:id="@+id/resendVerificationEmail"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/resend_verification_email"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            android:backgroundTint="@color/lightblue"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/forgotPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
